# qpgf

./: LICENSE  README.md  __init__.py  pyproject.toml
examples/: vqe_example.py
examples/data/: ibm_eagle.csv  ibm_heron.csv
src/qpgf/: error_model.py  parser.py  pgf.py  plot.py  utils.py
